--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+*{
+  margin: 0;
+  padding: 0
+  ;box-sizing: border-box;
+}
+
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -27,7 +34,14 @@
 .App-link {
   color: #61dafb;
 }
+.formInput{
+  
+  width: 49%;
 
+
+
+
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +49,20 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+
+
+
+
+
+.scrollType{
+
+  &::-webkit-scrollbar{
+
+    width: 9px;
+  }
+
+
 }
